# apps/OpenSignServer/public/openapi.json
@@ -1,43 +1,22 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "OpenSign API v1",
-    "description": "This is API documentation for OpenSign API v1 based on the OpenAPI 3.1 specification. \n\nSome useful links:\n- [Official Website](https://www.opensignlabs.com)\n- [Github repo](https://github.com/opensignlabs/opensign)",
-    "termsOfService": "http://www.opensignlabs.com/terms/",
+    "title": "FibexSign API v1",
+    "description": "This is the API documentation for the FibexSign API v1, based on the OpenAPI 3.1 specification.",
     "contact": {
-      "email": "contact@opensignlabs.com"
-    },
-    "license": {
-      "name": "AGPL 3.0",
-      "url": "http://github.com/opensignlabs/opensign/LICENSE"
+      "email": "contacto@fibexsign.com"
     },
     "version": "1.0.0"
   },
-  "externalDocs": {
-    "description": "Find out more about OpenSign",
-    "url": "http://docs.opensignlabs.com"
-  },
   "servers": [
     {
-      "url": "https://app.opensignlabs.com/api/v1"
+      "url": "https://app.fibexsign.com/api/v1"
     }
   ],
   "tags": [
     {
-      "name": "OpenSign",
-      "description": "OpenSource DocuSign alternative",
-      "externalDocs": {
-        "description": "Find out more",
-        "url": "http://www.opensignlabs.com"
-      }
-    },
-    {
-      "name": "Github repo",
-      "description": "Access the source code",
-      "externalDocs": {
-        "description": "Visit github",
-        "url": "http://github.com/opensignlabs/opensign"
-      }
+      "name": "FibexSign",
+      "description": "Electronic signature platform"
     },
     {
       "name": "templates",
